<resources>
    <string name="app_name">Jobio</string>
    <string name="strHiya">Hiya</string>
    <string name="strPoweredby">Poweredby:</string>
    <string name="strJobio">Jobio</string>
    <string name="strCopyRight">Copyright © 2015 Jobio. All rights reserved.</string>
    <string name="strCompany">Company</string>
    <string name="strQRNotExist">QR Code does not exits.</string>
    <string name="strScanCompanyQR">Scan Company QR Code</string>
    <string name="strEnterManuallyQRCode">Enter manually company QR code</string>
    <string name="strEnterQRCode">Enter QR code</string>
    <string name="strLogin">Login</string>
    <string name="strEnterUserName">Enter user name</string>
    <string name="strNotUserName">Not User Name?</string>
    <string name="strEnterPassword">Enter password</string>
    <string name="strEnterValidEmail">Enter valid email id</string>
    <string name="strMenu">Menu</string>
    <string name="strJob">Job</string>
    <string name="strJobs">Jobs</string>
    <string name="strInquiry">Inquiry</string>
    <string name="strMessage">Message</string>
    <string name="strExpense">Expense</string>
    <string name="strSettings">Settings</string>
    <string name="strExit">Exit</string>
    <string name="title_activity_ac_splash">acSplash</string>
    <string name="strOK">OK</string>
    <string name="action_settings">Settings</string>
    <string name="strConfirm">Confirm</string>
    <string name="strCancel">Cancel</string>
    <string name="strLoading">Loading...</string>
    <string name="strVerifying">Verifying...</string>
    <string name="strHelp">Help</string>
    <string name="strAbout">About</string>
    <string name="strContact">Contact</string>
    <string name="strMasterClear">Master Clear</string>
    <string name="strHome">Home</string>
    <string-array name="arrJob">
        <item>JOB LIST</item>
        <item>JOB MAP</item>
    </string-array>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_ac_job">acJob</string>
    <string name="strTo">To</string>
    <string name="strToday">Today</string>
    <string name="strTomorrow">Tomorrow</string>
    <string name="strYesterday">Yesterday</string>
    <string name="strEquipmentPickuplist">Equipment Pick up list</string>
    <string name="strItemPickupList">Item Pick up list</string>
    <string name="strTasklist">Task list</string>
    <string name="strCrewMember">Crew Members</string>
    <string name="strCustomerDetail">Customer Details</string>
    <string name="strTickEquipmentList">Tick equipment list</string>
    <string name="strTickItemtList">Tick Item list</string>
    <string name="strItem">Item</string>
    <string name="strType">Type</string>
    <string name="strQty">Qty</string>
    <string name="strTime">Time</string>
    <string name="strContactnumber">Contact number</string>
    <string name="strAddress">Address</string>
    <string name="strInternetNotAvaiable">Internet service is not available</string>
    <string name="strUnableToParseData">Unable to parse data</string>
    <string name="strServerNotResponding">Server not responding</string>
    <string name="strRequestTimeout">Request time out</string>
    <string name="strSessionExpire">Session has been expire</string>
    <string name="strInvalidUserNameAndPassword">Invalid username or password</string>
    <string name="strDatacannotReceive">Unable to receive data from network</string>
    <string name="strServerError">Server error</string>
    <string name="strClientError">Invalid URL request</string>
    <string name="strMastercleanMessage">Master clean shall remove all your personal and transactional data. Are you sure to clean data?</string>
    <string name="strSelectDate">Select Date</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_test">Test</string>
</resources>
