<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/tilt"
        android:padding="10dp">

        <ImageView
            android:id="@+id/imgLogo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true" />

        <TextView
            android:id="@+id/txtAccountName"
            style="@style/styTitleWhite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtCopyRight"
            style="@style/styDescSmallWhite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            app:font="@{`Ubuntu-L`}"
            android:text="@string/strCopyRight"

            />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@id/txtCopyRight"
            android:layout_alignParentRight="true"
            android:layout_marginBottom="5dp"
            android:orientation="horizontal">

            <TextView
                app:font="@{`Ubuntu-L`}"
                style="@style/styDescWhite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/strPoweredby" />

            <TextView
                app:font="@{`Ubuntu-M`}"
                style="@style/styJobio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/strJobio" />
        </LinearLayout>
    </RelativeLayout>
</layout>