<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:rdv="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data />

    <RelativeLayout

        android:id="@+id/rlMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone">

        <TableLayout
            android:id="@+id/tbl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:padding="1dp">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:id="@+id/lyJob"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:paddingBottom="1dp"
                    android:paddingTop="1dp">

                    <ImageButton
                        android:id="@+id/btnJob"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:background="@color/white"
                        android:src="@drawable/ic_job" />

                    <TextView
                        android:id="@+id/txtJob"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:text="@string/strJob"
                        android:textColor="@color/tilt"
                        android:textSize="16sp"
                        app:font="@{`Ubuntu-C`}" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/lyInquiry"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:paddingBottom="1dp"
                    android:paddingTop="1dp">

                    <ImageButton
                        android:id="@+id/btnInquiry"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center_horizontal"
                        android:background="@color/white"
                        android:src="@drawable/ic_inquiry" />

                    <TextView
                        android:id="@+id/txtInquiry"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:text="@string/strInquiry"
                        android:textColor="@color/tilt"
                        android:textSize="16sp"
                        app:font="@{`Ubuntu-C`}" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/lyMessage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:paddingBottom="1dp"
                    android:paddingTop="1dp">

                    <ImageButton
                        android:id="@+id/btnMessage"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center_horizontal"
                        android:background="@color/white"
                        android:src="@drawable/ic_message" />

                    <TextView
                        android:id="@+id/txtMessage"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:text="@string/strMessage"
                        android:textColor="@color/tilt"
                        android:textSize="16sp"
                        app:font="@{`Ubuntu-C`}" />
                </LinearLayout>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:id="@+id/lyExpense"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:paddingBottom="1dp"
                    android:paddingTop="1dp">

                    <ImageButton
                        android:id="@+id/btnExpense"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center_horizontal"
                        android:background="@color/white"
                        android:src="@drawable/ic_expense" />

                    <TextView
                        android:id="@+id/txtExpense"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:text="@string/strExpense"
                        android:textColor="@color/tilt"
                        android:textSize="16sp"
                        app:font="@{`Ubuntu-C`}" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/lySetting"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:paddingBottom="1dp"
                    android:paddingTop="1dp">

                    <ImageButton
                        android:id="@+id/btnSettings"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center_horizontal"
                        android:background="@color/white"
                        android:src="@drawable/ic_settings" />

                    <TextView
                        android:id="@+id/txtSetting"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:text="@string/strSettings"
                        android:textColor="@color/tilt"
                        android:textSize="16sp"
                        app:font="@{`Ubuntu-C`}" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/lyExit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:paddingBottom="1dp"
                    android:paddingTop="1dp">

                    <ImageButton
                        android:id="@+id/btnExit"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center_horizontal"
                        android:background="@color/white"
                        android:src="@drawable/ic_exit" />

                    <TextView
                        android:id="@+id/txtExit"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:text="@string/strExit"
                        android:textColor="@color/tilt"
                        android:textSize="16sp"
                        app:font="@{`Ubuntu-C`}" />
                </LinearLayout>
            </TableRow>
        </TableLayout>

        <ImageButton
            android:id="@+id/btnCloseMenu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tbl"
            android:layout_marginLeft="20dp"
            android:background="@drawable/ic_bottommenu" />
    </RelativeLayout>
</layout>