<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:rdv="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">


    <data />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/tilt"
        android:padding="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="vertical">

            <!-- <TextView
                 style="@style/styTitle"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/strCompany" />-->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:orientation="vertical"
                android:padding="5dp">

                <me.zhanghai.android.materialedittext.MaterialTextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <me.zhanghai.android.materialedittext.MaterialEditText
                        android:id="@+id/edQRCode"
                        style="@style/editText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/strEnterQRCode"
                        app:font="@{`Ubuntu-L`}" />
                </me.zhanghai.android.materialedittext.MaterialTextInputLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <com.thomsonreuters.rippledecoratorview.RippleDecoratorView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_margin="4dp"
                        android:layout_weight="1"
                        rdv:rdv_rippleAnimationDuration="600"
                        rdv:rdv_rippleAnimationFrames="60"
                        rdv:rdv_rippleAnimationPeakFrame="15"
                        rdv:rdv_rippleColor="@android:color/white"
                        rdv:rdv_rippleMaxAlpha="0.8"
                        rdv:rdv_rippleRadius="50dp">

                        <Button
                            android:id="@+id/btnOK"
                            style="@style/btn"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@color/tilt"
                            android:padding="4dp"
                            android:text="@string/strOK"
                            app:font="@{`Ubuntu-L`}" />
                    </com.thomsonreuters.rippledecoratorview.RippleDecoratorView>

                    <com.thomsonreuters.rippledecoratorview.RippleDecoratorView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_margin="4dp"
                        android:layout_weight="1"
                        rdv:rdv_rippleAnimationDuration="600"
                        rdv:rdv_rippleAnimationFrames="60"
                        rdv:rdv_rippleAnimationPeakFrame="15"
                        rdv:rdv_rippleColor="@android:color/white"
                        rdv:rdv_rippleMaxAlpha="0.8"
                        rdv:rdv_rippleRadius="50dp">


                        <Button
                            android:id="@+id/btnCancel"
                            style="@style/btn"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@color/tilt"
                            android:padding="4dp"
                            android:text="@string/strCancel"
                            app:font="@{`Ubuntu-L`}" />
                    </com.thomsonreuters.rippledecoratorview.RippleDecoratorView>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>
</layout>